--- a/IESA_ROOT/templates/base.html
+++ b/IESA_ROOT/templates/base.html
@@ -95,6 +95,9 @@
     
     <!-- TIER 9: Advanced Search -->
     <link rel="stylesheet" href="{% static 'css/advanced-search.css' %}">
+    
+    <!-- Language Selector -->
+    <link rel="stylesheet" href="{% static 'css/language-selector.css' %}">
 
 </head>
 <body>
@@ -304,6 +307,9 @@
     
     <!-- TIER 9: Advanced Search -->
     <script src="{% static 'js/advanced-search.js' %}"></script>
+    
+    <!-- Language Selector -->
+    <script src="{% static 'js/language-selector.js' %}"></script>
     
         <!-- Small helper: add missing Bootstrap form-control classes to form fields if not present -->
         <script>
